fix: remove <Autocomplete /> content jump

--- a/react-forms/src/index.scss
+++ b/react-forms/src/index.scss
@@ -7,6 +7,7 @@ body {
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   margin-inline: auto;
   padding: 0 15px;
+  padding-bottom: 100px;
   max-width: 650px;
   font-size: 115%;
   line-height: 1.4;
